--- a/OpenShift/nuodb.3.3-openshift-sm-hostpath-template.yaml
+++ b/OpenShift/nuodb.3.3-openshift-sm-hostpath-template.yaml
@@ -111,7 +111,7 @@ objects:
             value: ${NODE_REGION}
           - name: NODE_TYPE
             value: SM
-          - name: SM_MEMORY
+          - name: MEM_OPTION
             value: ${SM_MEMORY}
           - name: INSIGHTS_URL
             value: "https://insights-qa.nuodb.com/api/1"
@@ -200,7 +200,7 @@ parameters:
     displayName: SM Memory Allocation
     description: "Enter a value for memory to be allocated for the SM"
     required: false
-    value: "4g"
+    value: "8g"
   - name: CONTAINER
     displayName: Container Registry
     description: "Registry to pull NuoDB from"
