fixed display names

--- a/OpenShift/nuodb.3.3-openshift-admin-openebs-template.yaml
+++ b/OpenShift/nuodb.3.3-openshift-admin-openebs-template.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     template: nuodb-admin-openebs
   annotations:
-    openshift.io/display-name: "NuoDB Admin"
+    openshift.io/display-name: "NuoDB Admin (OpenEBS)"
     description: "NuoDB database service, with persistent storage. For more information about using this template, including OpenShift considerations, see https://hub.docker.com/r/nuodb/nuodb-ce/ \n\nWARNING: Any data stored will be lost upon pod destruction. Only use this template for testing"
     iconClass: https://www.nuodb.com/sites/all/themes/nuodb/logo.svg
     tags: "database,nuodb"
