--- a/OpenShift/nuodb.3.3-openshift-sm-hostpath-template.yaml
+++ b/OpenShift/nuodb.3.3-openshift-sm-hostpath-template.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     template: nuodb-sm-hostpath
   annotations:
-    openshift.io/display-name: "NuoDB SM (Ephemeral)"
+    openshift.io/display-name: "NuoDB SM (HostPath)"
     description: "NuoDB database service, with persistent storage. For more information about using this template, including OpenShift considerations, see https://hub.docker.com/r/nuodb/nuodb-ce/ \n\nWARNING: Any data stored will be lost upon pod destruction. Only use this template for testing"
     iconClass: https://www.nuodb.com/sites/all/themes/nuodb/logo.svg
     tags: "database,nuodb"
