--- a/GettingStarted/.gitignore
+++ b/GettingStarted/.gitignore
@@ -1,4 +1,4 @@
-/target/
+**target/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -6,7 +6,7 @@
 .classpath
 .factorypath
 .project
-.settings
+/.settings/
 .springBeans
 .sts4-cache
 
